--- a/lesson03/HW3.ipynb
+++ b/lesson03/HW3.ipynb
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 1325,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "(153, 13)"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 1325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 1326,
    "metadata": {},
    "outputs": [
     {
@@ -987,6 +987,54 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2412</th>\n",
+       "      <td>3399</td>\n",
+       "      <td>22629</td>\n",
+       "      <td>2</td>\n",
+       "      <td>138</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2944</th>\n",
+       "      <td>4150</td>\n",
+       "      <td>19591</td>\n",
+       "      <td>1</td>\n",
+       "      <td>134</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3208</th>\n",
+       "      <td>4523</td>\n",
+       "      <td>18285</td>\n",
+       "      <td>1</td>\n",
+       "      <td>136</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3420</th>\n",
        "      <td>4838</td>\n",
        "      <td>14516</td>\n",
@@ -1002,54 +1050,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3735</th>\n",
-       "      <td>5278</td>\n",
-       "      <td>17642</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>120</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3752</th>\n",
-       "      <td>5306</td>\n",
-       "      <td>15400</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>110</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4212</th>\n",
-       "      <td>5946</td>\n",
-       "      <td>16110</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1057,20 +1057,20 @@
       "text/plain": [
        "        id    age  gender  height  weight  ap_hi  ap_lo  cholesterol  gluc  \\\n",
        "224    309  21800       2      76    55.0    120     80            1     1   \n",
+       "2412  3399  22629       2     138    52.0    140    100            1     1   \n",
+       "2944  4150  19591       1     134    52.0    120     70            1     1   \n",
+       "3208  4523  18285       1     136    57.0    120     80            1     1   \n",
        "3420  4838  14516       1     100    70.0    100     70            1     1   \n",
-       "3735  5278  17642       1     120    70.0    120     70            1     1   \n",
-       "3752  5306  15400       1     120    30.0    110     70            1     1   \n",
-       "4212  5946  16110       1     120    80.0    120     80            1     1   \n",
        "\n",
        "      smoke  alco  active  cardio  \n",
        "224       0     0       1       0  \n",
-       "3420      0     0       1       0  \n",
-       "3735      0     0       1       0  \n",
-       "3752      0     0       1       0  \n",
-       "4212      0     0       1       0  "
+       "2412      0     0       1       1  \n",
+       "2944      0     0       0       0  \n",
+       "3208      0     0       1       0  \n",
+       "3420      0     0       1       0  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 1326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,12 +1444,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 913,
+   "execution_count": 1328,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1328-09f0f7c0f035>:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_height_for_pred['height'] = pd.Series(y_real_heights).values\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>alco</th>\n",
+       "      <th>active</th>\n",
+       "      <th>cardio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>309</td>\n",
+       "      <td>21800</td>\n",
+       "      <td>2</td>\n",
+       "      <td>167.498061</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2412</th>\n",
+       "      <td>3399</td>\n",
+       "      <td>22629</td>\n",
+       "      <td>2</td>\n",
+       "      <td>167.195791</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2944</th>\n",
+       "      <td>4150</td>\n",
+       "      <td>19591</td>\n",
+       "      <td>1</td>\n",
+       "      <td>161.739995</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3208</th>\n",
+       "      <td>4523</td>\n",
+       "      <td>18285</td>\n",
+       "      <td>1</td>\n",
+       "      <td>164.263076</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3420</th>\n",
+       "      <td>4838</td>\n",
+       "      <td>14516</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162.714527</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66479</th>\n",
+       "      <td>94906</td>\n",
+       "      <td>16928</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172.921690</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66643</th>\n",
+       "      <td>95141</td>\n",
+       "      <td>18830</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162.511651</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67866</th>\n",
+       "      <td>96921</td>\n",
+       "      <td>21763</td>\n",
+       "      <td>1</td>\n",
+       "      <td>161.303477</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>180</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69052</th>\n",
+       "      <td>98630</td>\n",
+       "      <td>20401</td>\n",
+       "      <td>2</td>\n",
+       "      <td>170.992862</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69124</th>\n",
+       "      <td>98728</td>\n",
+       "      <td>16050</td>\n",
+       "      <td>2</td>\n",
+       "      <td>168.750173</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id    age  gender      height  weight  ap_hi  ap_lo  cholesterol  \\\n",
+       "224      309  21800       2  167.498061    55.0    120     80            1   \n",
+       "2412    3399  22629       2  167.195791    52.0    140    100            1   \n",
+       "2944    4150  19591       1  161.739995    52.0    120     70            1   \n",
+       "3208    4523  18285       1  164.263076    57.0    120     80            1   \n",
+       "3420    4838  14516       1  162.714527    70.0    100     70            1   \n",
+       "...      ...    ...     ...         ...     ...    ...    ...          ...   \n",
+       "66479  94906  16928       2  172.921690    90.0    110     90            1   \n",
+       "66643  95141  18830       1  162.511651    61.0    130     90            1   \n",
+       "67866  96921  21763       1  161.303477   123.0    180    100            2   \n",
+       "69052  98630  20401       2  170.992862    80.0    140     90            1   \n",
+       "69124  98728  16050       2  168.750173    60.0    110     80            1   \n",
+       "\n",
+       "       gluc  smoke  alco  active  cardio  \n",
+       "224       1      0     0       1       0  \n",
+       "2412      1      0     0       1       1  \n",
+       "2944      1      0     0       0       0  \n",
+       "3208      1      0     0       1       0  \n",
+       "3420      1      0     0       1       0  \n",
+       "...     ...    ...   ...     ...     ...  \n",
+       "66479     1      0     0       1       0  \n",
+       "66643     1      0     0       1       1  \n",
+       "67866     1      0     0       1       1  \n",
+       "69052     2      0     0       1       1  \n",
+       "69124     1      0     0       0       0  \n",
+       "\n",
+       "[153 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 1328,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Ожидаемо. Теперь предскажем те значения ради которых мы это и делали\n",
-    "y_real_heights = height_predictor_rf.predict(df_height_for_pred.drop('cardio', axis=1))"
+    "y_real_heights = height_predictor_rf.predict(df_height_for_pred.drop('cardio', axis=1))\n",
+    "df_height_for_pred['height'] = pd.Series(y_real_heights).values\n",
+    "df_height_for_pred"
    ]
   },
   {
@@ -3737,7 +4004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## По сырой выборке результаты - GradientBoosting лучше всего раюботает, RandomTree на втором месте, LogReg - на последнем"
+    "## По сырой выборке результаты - GradientBoosting лучше всего работает, RandomTree на втором месте, LogReg - на последнем"
    ]
   },
   {
