--- a/lesson7/lesson7.ipynb
+++ b/lesson7/lesson7.ipynb
@@ -868,7 +868,7 @@
    "outputs": [],
    "source": [
     "# Но если отбросить в сторону эту странность - получается что в целом - самый важный признак - это алкоголь\n",
-    "# Вина с большим содержанием алкоголя имеют больше шансов получить оценку 'good'.\n",
+    "# Вина с бОльшим содержанием алкоголя имеют больше шансов получить оценку 'good'.\n",
     "# Также большую важность имеет высокий уровень сульфатов и летучих кислот.. \n",
     "# (я не спец в этой области - мне трудно реально оценить истинность этих утверждений :))\n",
     "\n",
